# ArmRL

./: .gitignore  LICENSE.txt  README.md
plugins/: CMakeLists.txt  arm_gz.cc  arm_gz.h  arm_plugin.cc  ball_gz.cc  ball_plugin.cc  ball_plugin.h
python/: .twojoint.py.swp  console_widgets.py  core.py  dqn.py  environment.py  joint2.py  joint3.py  joint4.py  joint5.py  joint6.py  joint7.py  manual.py  memory.py  models.py  plot_eval.py  policy.py  power.py  q1.csv  simulation.py  threejoint.py  trajectory.py  twojoint.py  widgets.py
scripts/: killserver.sh
worlds/: basketball_world.world
